--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "pg": "^7.8.2",
+    "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
     "sequelize": "^5.1.0"
   },
