--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.0",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.8.2",
     "pg-hstore": "^2.3.2",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.3",
     "sequelize": "^5.1.0"
   },
   "devDependencies": {
