--- a/config/config.json
+++ b/config/config.json
@@ -13,11 +13,12 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
+  // SET FOR PROD
   "production": {
-    "username": "aaron",
-    "password": "password",
-    "database": "postgres",
-    "host": "127.0.0.1",
+    "username": "PROCESS.ENV.DATABASE_USER",
+    "password": "PROCESS.ENV.DATABASE_PASSWORD",
+    "database": "PROCESS.ENV.DATABASE",
+    "host": "PROCESS.ENV.HOST",
     "dialect": "postgres"
   }
 }
