--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.0",
+    "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
