--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build-css": "node-sass --include-path scss public/sass/style.scss public/stylesheets/main.css",
+    "watch-css": "nodemon -e scss -x 'npm run build-css'"
   },
   "dependencies": {
     "bcrypt": "^3.0.4",
@@ -20,6 +22,8 @@
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
+    "node-sass": "^4.11.0",
+    "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.8.2",
